--- a/backend/config.env
+++ b/backend/config.env
@@ -1,2 +1,3 @@
-
-
+MONGODB_URI=mongodb+srv://dabasaborifan_db_user:Avjqz1lwZWukQnYH@cluster0.waerydc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=4retddjcvcbvfvcv345
+PORT=5000
